<resources>
    <string name="app_name">Sudoku Solver</string>
    <string name="enterSudoku">Enter a Sudoku</string>
    <string name="solve">Solve</string>
    <string name="pleaseEnter">Please enter the Sudoku\'s initial values:</string>
    <string name="zero">0</string>
    <string name="solving">Solving Sudoku</string>
    <string name="reenter">New Sudoku</string>
    <string name="details">solution details</string>
    <string name="clear">clear</string>
    <string name="solnDetailsTitle">Solution Details</string>
    <string name="note">NOTE: this algorithm finds just one valid solution, although there could be many valid solutions.</string>
    <string name="goMain">Go Main</string>
</resources>
