<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SudokuSolutionActivity"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="2"
        android:gravity="center"
        android:padding="10dp">

        <TextView
            android:id="@+id/solveStatus"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/solving"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_margin="20dp"
        android:id="@+id/rv_solution"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="8"
        android:numColumns="9"
        android:gravity="center"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:padding="20dp"
        android:gravity="center">

        <Button
            android:text="@string/reenter"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="enterNewSudoku"
            />

        <Button
            android:text="@string/details"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="getDetails"/>

    </LinearLayout>


</LinearLayout>